# ASRHub

./: .gitignore  .gitmodules  ASRHUB_ARCHITECTURE_DESIGN.md  BUFFER_TEST_GUIDE.md  CLAUDE.md  CLAUDE_ZH.md  LICENSE  Makefile  PYSTOREX_INTEGRATION_FEASIBILITY.md  README.md  REDIS_CLIENT_GUIDE.md  SETUP.md  SRS.md  TODO_PHASE1.md  TODO_PHASE2.md  TODO_PyStoreX_Integration.md  audio_dashboard.py  check_requirements.py  frontend_server.py  main.py  poc_pystorex.py  pyproject.toml  requirements.dev.txt  requirements.txt  requirements_with_versions.txt  run.sh  run_visualization.py  setup.py  start_asr_hub.sh  stop_asr_hub.sh  stop_main.py  test_audio_pipeline.py  test_fsm_timeout.py  test_http_client.py  test_http_sse_transcribe.py  test_int16_microphone.py  test_microphone_effects_flow.py  test_pipeline_integration.py  test_recording_visual.py  test_redis_client.py  (+5 more)
.git.backup/: COMMIT_EDITMSG  config  index
.git.backup/logs/: HEAD
backups/api/: base.py
backups/audio/: models.py  processor.py  utils.py
backups/config/: __init__.py  manager.py  schema.py
backups/core/: asr_hub.py  audio_queue.py  audio_queue_manager.py  exceptions.py  timer_manager.py  timer_service.py
backups/operators/: base.py
backups/providers/: pool_manager.py  provider_pool.py
backups/store/: __init__.py  initialize.py  main_store.py  store_config.py
backups/stream/: stream_controller.py
backups/utils/: audio_format_detector.py  rxpy_async.py  time_provider.py  validators.py
brain_dump/: phase1.md  phase2.md
config/: base.sample.yaml  config.backup.yaml  config.optimized.yaml  config.sample.yaml  config.yaml  pool_example.yaml
docs/: HTTP_SSE_API_GUIDE.md  UNIFIED_ROUTING.md
frontend/: README.md  WebASRCore-Design copy.md  WebASRCore-Design-v2.md  WebASRCore-Design.md  app.js  index.html  style.css
frontend/WebASRCore-docs/: FINAL-SUMMARY.md  STRUCTURE.md  duplicates-found.md
frontend/batch-test/: index.html
frontend/common/: common.js  dark-mode-styles.css  styles.css  test-cards.js  theme.js
frontend/fsm-test/: app-zen.js  app.js  diagram-zen.js  diagram.js  fcm_狀態機擴充說明_交付工程實作用.md  fsm.js  index-zen.html  index.html  styles.css
frontend/protocol-test/: app.js  index.html  styles.css
frontend/realtime-streaming/: README.md  app.js  index.html  streaming-flow.md  styles.css  test-action-format.html  test-connection.html  實時串流實作完成報告.md
frontend/realtime-test/: index.html
references/: ARCHITECTURE_ANALYSIS.md  CONCURRENT_ANALYSIS.md  PROVIDER_POOL_INTEGRATION_PLAN.md  TECHNICAL_TODO.md  TECHNICAL_TODOLIST.md  audio_flow_architecture.md  realtime-voice-processing-architecture-merged.md  realtime-voice-processing-architecture.md  test_frontend.md
references/spec/: SRS.md  (+2 more)
scripts/: migrate_wakeword.py
test_audio/: large.aiff  sample.aiff  small.aiff
tests/: HTTP_SSE_API_GUIDE.md  __init__.py  test_http_client.py  test_redis_client.py  test_standalone.py  test_timer_manager.py  test_webrtc_livekit.py
tools/: wakeword_benchmark.py  wakeword_monitor.py
(+268 files in other folders)
